DTS-43147:fieldMappingTemplateChanges Change Log: Added sonar fix